Added more detailed documentation and added timed messaging for delayed messaging between actors